--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
         "livewire/livewire": "^2.12",
+        "realrashid/sweet-alert": "^7.0",
         "tymon/jwt-auth": "^2.0"
     },
     "require-dev": {
